--- a/dashboard.html
+++ b/dashboard.html
@@ -1,111 +1,161 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Robot Control Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap 5 CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+  <meta charset="UTF-8">  
+  <title>Robot Control Dashboard</title>  
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <!-- Bootstrap 5 CDN -->  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">  
+</head>  
+<body class="bg-light">  
 
-<div class="container py-5">
-  <h2 class="text-center mb-4">🤖 Robot Brain Control Dashboard</h2>
+<div class="container py-5">  
+  <h2 class="text-center mb-4">🤖 Robot Brain Control Dashboard</h2>  
 
-  <div class="row g-4">
-    <!-- Left Column: Parameters Section -->
-    <div class="col-md-6">
-      <div class="card shadow-sm">
-        <div class="card-body">
-          <h5 class="card-title">🔧 Parameters</h5>
+  <div class="row g-4">  
+    <!-- Left Column: Parameters Section -->  
+    <div class="col-md-6">  
+      <div class="card shadow-sm">  
+        <div class="card-body">  
+          <h5 class="card-title">🔧 Parameters</h5>  
 
-          <div class="mb-3">
-            <label class="form-label">Target</label>
-            <input type="number" class="form-control" id="target" value="0.0">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">FPS</label>
-            <input type="number" class="form-control" id="fps" value="10">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Alpha</label>
-            <input type="number" class="form-control" id="alpha" value="0.001" step="0.0001">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Max Value</label>
-            <input type="number" class="form-control" id="max_value" value="20">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Mode</label>
-            <select class="form-select" id="mode">
-              <option value="0">Stop Mode</option>
-              <option value="1">Work Mode</option>
-            </select>
-          </div>
+          <!-- Server IP Configuration -->  
+          <div class="mb-3">  
+            <label class="form-label">Server IP</label>  
+            <input type="text" class="form-control" id="server_ip" value="192.168.4.1">  
+          </div>  
 
-        </div>
-      </div>
-    </div>
+          <!-- Parameter Configuration -->  
+          <div class="mb-3">  
+            <label class="form-label">Target</label>  
+            <input type="number" class="form-control" id="target" value="0.0">  
+          </div>  
+          <div class="mb-3">  
+            <label class="form-label">FPS</label>  
+            <input type="number" class="form-control" id="fps" value="10">  
+          </div>  
+          <div class="mb-3">  
+            <label class="form-label">Alpha</label>  
+            <input type="number" class="form-control" id="alpha" value="0.001" step="0.0001">  
+          </div>  
+          <div class="mb-3">  
+            <label class="form-label">Max Value</label>  
+            <input type="number" class="form-control" id="max_value" value="20">  
+          </div>  
+          <div class="mb-3">  
+            <label class="form-label">Mode</label>  
+            <div class="d-flex align-items-center mb-3">  
+              <!-- Toggle button for mode selection -->  
+              <button id="modeButton" class="btn btn-outline-danger w-100" onclick="toggleMode()">🔴 Stop Mode</button>  
+            </div>  
+          </div>  
 
-    <!-- Right Column: PID Tuning Section -->
-    <div class="col-md-6">
-      <div class="card shadow-sm">
-        <div class="card-body">
-          <h5 class="card-title">🧠 PID Tuning</h5>
+          <!-- Send Parameters Button -->  
+          <button class="btn btn-primary w-100 mt-2" onclick="sendParams()">🚀 Send Parameters</button>  
+        </div>  
+      </div>  
+    </div>  
 
-          <div class="mb-3">
-            <label class="form-label">Kp</label>
-            <input type="number" class="form-control" id="kp" value="0.05" step="0.01">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Ki</label>
-            <input type="number" class="form-control" id="ki" value="0.01" step="0.01">
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Kd</label>
-            <input type="number" class="form-control" id="kd" value="0.001" step="0.001">
-          </div>
+    <!-- Right Column: PID Tuning Section -->  
+    <div class="col-md-6">  
+      <div class="card shadow-sm">  
+        <div class="card-body">  
+          <h5 class="card-title">🧠 PID Tuning</h5>  
 
-          <button class="btn btn-primary w-100 mt-3" onclick="sendParams()">🚀 Send Parameters</button>
-        </div>
-      </div>
-    </div>
-  </div>
+          <div class="mb-3">  
+            <label class="form-label">Kp (Proportional)</label>  
+            <input type="range" class="form-range" id="kp" min="0" max="1" step="0.01" value="0.05" oninput="updateSliderValue('kp', this.value)">  
+            <span id="kpValue" class="text-muted">0.05</span>  
+          </div>  
+          <div class="mb-3">  
+            <label class="form-label">Ki (Integral)</label>  
+            <input type="range" class="form-range" id="ki" min="0" max="1" step="0.01" value="0.01" oninput="updateSliderValue('ki', this.value)">  
+            <span id="kiValue" class="text-muted">0.01</span>  
+          </div>  
+          <div class="mb-3">  
+            <label class="form-label">Kd (Derivative)</label>  
+            <input type="range" class="form-range" id="kd" min="0" max="0.1" step="0.001" value="0.001" oninput="updateSliderValue('kd', this.value)">  
+            <span id="kdValue" class="text-muted">0.001</span>  
+          </div>  
+        </div>  
+      </div>  
+    </div>  
+  </div>  
+</div>  
 
-</div>
+<!-- JavaScript Section -->  
+<script>  
+  let mode = 0; // 0 for Stop Mode, 1 for Work Mode  
 
-<!-- JavaScript Section -->
-<script>
-  // IP address of the ESP32 device
-  const esp32_ip = "192.168.4.1"; 
+  // Function to toggle mode between Stop and Work  
+  function toggleMode() {  
+    mode = mode === 0 ? 1 : 0;  
 
-  // Function to collect parameters and send them to ESP32
-  function sendParams() {
-    // Collect values from form fields
-    const params = {
-      target: document.getElementById("target").value,
-      fps: document.getElementById("fps").value,
-      alpha: document.getElementById("alpha").value,
-      max_value: document.getElementById("max_value").value,
-      kp: document.getElementById("kp").value,
-      ki: document.getElementById("ki").value,
-      kd: document.getElementById("kd").value,
-      mode: document.getElementById("mode").value,
-    };
+    const modeButton = document.getElementById("modeButton");  
+    if (mode === 1) {  
+      modeButton.classList.remove("btn-outline-danger");  
+      modeButton.classList.add("btn-outline-success");  
+      modeButton.textContent = "🟢 Work Mode";  
+    } else {  
+      modeButton.classList.remove("btn-outline-success");  
+      modeButton.classList.add("btn-outline-danger");  
+      modeButton.textContent = "🔴 Stop Mode";  
+    }  
+  }  
 
-    // Construct URL query string
-    const queryString = Object.entries(params)
-      .map(([key, val]) => `${key}=${encodeURIComponent(val)}`)
-      .join("&");
+  // Function to update slider value labels  
+  function updateSliderValue(id, value) {  
+    document.getElementById(`${id}Value`).textContent = value;  
+  }  
 
-    const url = `http://${esp32_ip}/set?${queryString}`;
+  // Function to collect parameters and send them to ESP32  
+  function sendParams() {  
+    // Get the server IP address from the input field  
+    const server_ip = document.getElementById("server_ip").value;  
 
-    // Send GET request without handling response
-    fetch(url).catch(error => {
-      console.error("Fetch failed:", error);
-    });
-  }
-</script>
+    // Validate the server IP  
+    if (!server_ip) {  
+      alert("Please enter a valid Server IP");  
+      return;  
+    }  
 
-</body>
-</html>
+    // Collect values from form fields and sliders  
+    const params = {  
+      target: document.getElementById("target").value,  
+      fps: document.getElementById("fps").value,  
+      alpha: document.getElementById("alpha").value,  
+      max_value: document.getElementById("max_value").value,  
+      kp: document.getElementById("kp").value,  
+      ki: document.getElementById("ki").value,  
+      kd: document.getElementById("kd").value,  
+      mode: mode, // Use the updated mode value  
+    };  
+
+    // Construct URL query string  
+    const queryString = Object.entries(params)  
+      .map(([key, val]) => `${key}=${encodeURIComponent(val)}`)  
+      .join("&");  
+
+    const url = `http://${server_ip}/set?${queryString}`;  
+
+    // Send GET request  
+    fetch(url)  
+      .then(response => {  
+        if (!response.ok) {  
+          throw new Error(`HTTP error! status: ${response.status}`);  
+        }  
+        return response.text();  
+      })  
+      .then(data => {  
+        console.log("Response:", data);  
+        alert("Parameters successfully sent!");  
+      })  
+      .catch(error => {  
+        console.error("Fetch failed:", error);  
+        alert("Failed to send parameters. Please check the server IP and try again.");  
+      });  
+  }  
+</script>  
+
+</body>  
+</html>  
